# Bytezo

./: .env.example  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml  tailwind.config.js
.github/workflows/: codeql.yml  docker-build-push.yml
bytezo_website/: backend.py  database.py  main.py  server.py
bytezo_website/static/css/: output.css
bytezo_website/templates/: index.html  message.html
