[project]
name = "bytezo-website"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Luis Schuimer", email = "85784931+LuisSchuimer@users.noreply.github.com" }
]
dependencies = [
    "flask>=3.0.3",
    "pytailwindcss-extra>=0.1.0",
    "peewee>=3.17.7",
    "python-dotenv>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye.scripts]
dev = "python3 -m bytezo_website.server"
css-watch = "rye run tailwindcss-extra -i .//bytezo_website/static/css/input.css -o .//bytezo_website/static/css/output.css --watch"
css-build = "rye run tailwindcss-extra -i .//bytezo_website/static/css/input.css -o .//bytezo_website/static/css/output.css"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bytezo_website"]
