[project]
name = "bytezo-website"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Luis Schuimer", email = "85784931+LuisSchuimer@users.noreply.github.com" }
]
dependencies = [
    "flask==3.*",
    "pytailwindcss-extra==0.1.*",
    "peewee==3.*",
    "python-dotenv==1.*",
    "niquests==3.*",
    "gunicorn==23.*",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye.scripts]
dev = "python3 -m bytezo_website.main"
css-gen = { cmd = "tailwindcss-extra -i .//bytezo_website/static/css/input.css -o .//bytezo_website/static/css/output.css --watch", env = { PYTAILWINDCSS_EXTRA_VERSION = "v1.7.27" } }
css-build = { cmd = "tailwindcss-extra -i .//bytezo_website/static/css/input.css -o .//bytezo_website/static/css/output.css", env = { PYTAILWINDCSS_EXTRA_VERSION = "v1.7.27" } }

[tool.rye]
managed = true
virtual = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bytezo_website"]
